# classificationapi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.pip  LICENSE  README.md  RENDER_DEPLOYMENT.md  cloudbuild.yaml  docker-compose.override.yml  docker-compose.yml  koyeb.yaml  mkdocs.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: app.py  index.py
docs/: index.md
docs/api/: classification.md  errors.md  health.md  overview.md  schema.md  scoring.md
docs/development/: contributing.md  deployment.md  testing.md
docs/examples/: batch.md  custom.md  skos.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
evaluation_criteria/: aktualitaet.yaml  didaktik_methodik.yaml  neutralitaet.yaml  sachrichtigkeit.yaml  sprachliche_verstaendlichkeit.yaml
src/: __init__.py  main.py
src/api/: dependencies.py  errors.py  scoring.py
src/api/routes/: __init__.py  classify.py  health.py
src/core/: config.py  logging.py
src/schemas/: __init__.py  classification.py  health.py  scoring.py
src/services/: __init__.py  classification.py  scoring_service.py
tests/: conftest.py  test_classification.py  test_health.py  test_scoring.py  test_scoring_api.py  test_services.py
